first spark implementation

--- a/src/Data analysis.ipynb
+++ b/src/Data analysis.ipynb
@@ -130,7 +130,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Il testo contiene punteggiatura e tag HTML che dovranno essere rimossi"
+    "#### Il testo contiene punteggiatura e tag HTML che dovranno essere rimossi\n",
+    "#### La colonna time andrà convertita di formato per individuare l'anno di riferimento"
    ]
   },
   {
