--- a/src/Data analysis.ipynb
+++ b/src/Data analysis.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-05-06T11:13:14.777145Z",
-     "end_time": "2023-05-06T11:13:14.778935Z"
+     "end_time": "2023-05-20T12:24:23.582939Z",
+     "start_time": "2023-05-20T12:24:21.477870Z"
     }
    },
    "outputs": [],
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-05-06T11:32:46.150579Z",
-     "end_time": "2023-05-06T11:32:50.466383Z"
+     "end_time": "2023-05-20T12:29:12.276411Z",
+     "start_time": "2023-05-20T12:29:08.546008Z"
     }
    },
    "outputs": [
@@ -36,23 +36,23 @@
       "text/plain": "   Id   ProductId          UserId                      ProfileName  \\\n0   1  B001E4KFG0  A3SGXH7AUHU8GW                       delmartian   \n1   2  B00813GRG4  A1D87F6ZCVE5NK                           dll pa   \n2   3  B000LQOCH0   ABXLMWJIXXAIN  Natalia Corres \"Natalia Corres\"   \n3   4  B000UA0QIQ  A395BORC6FGVXV                             Karl   \n4   5  B006K2ZZ7K  A1UQRSCLF8GW1T    Michael D. Bigham \"M. Wassir\"   \n\n   HelpfulnessNumerator  HelpfulnessDenominator  Score        Time  \\\n0                     1                       1      5  1303862400   \n1                     0                       0      1  1346976000   \n2                     1                       1      4  1219017600   \n3                     3                       3      2  1307923200   \n4                     0                       0      5  1350777600   \n\n                 Summary                                               Text  \n0  Good Quality Dog Food  I have bought several of the Vitality canned d...  \n1      Not as Advertised  Product arrived labeled as Jumbo Salted Peanut...  \n2  \"Delight\" says it all  This is a confection that has been around a fe...  \n3         Cough Medicine  If you are looking for the secret ingredient i...  \n4            Great taffy  Great taffy at a great price.  There was a wid...  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Id</th>\n      <th>ProductId</th>\n      <th>UserId</th>\n      <th>ProfileName</th>\n      <th>HelpfulnessNumerator</th>\n      <th>HelpfulnessDenominator</th>\n      <th>Score</th>\n      <th>Time</th>\n      <th>Summary</th>\n      <th>Text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>B001E4KFG0</td>\n      <td>A3SGXH7AUHU8GW</td>\n      <td>delmartian</td>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>1303862400</td>\n      <td>Good Quality Dog Food</td>\n      <td>I have bought several of the Vitality canned d...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>B00813GRG4</td>\n      <td>A1D87F6ZCVE5NK</td>\n      <td>dll pa</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1346976000</td>\n      <td>Not as Advertised</td>\n      <td>Product arrived labeled as Jumbo Salted Peanut...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>B000LQOCH0</td>\n      <td>ABXLMWJIXXAIN</td>\n      <td>Natalia Corres \"Natalia Corres\"</td>\n      <td>1</td>\n      <td>1</td>\n      <td>4</td>\n      <td>1219017600</td>\n      <td>\"Delight\" says it all</td>\n      <td>This is a confection that has been around a fe...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>B000UA0QIQ</td>\n      <td>A395BORC6FGVXV</td>\n      <td>Karl</td>\n      <td>3</td>\n      <td>3</td>\n      <td>2</td>\n      <td>1307923200</td>\n      <td>Cough Medicine</td>\n      <td>If you are looking for the secret ingredient i...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>B006K2ZZ7K</td>\n      <td>A1UQRSCLF8GW1T</td>\n      <td>Michael D. Bigham \"M. Wassir\"</td>\n      <td>0</td>\n      <td>0</td>\n      <td>5</td>\n      <td>1350777600</td>\n      <td>Great taffy</td>\n      <td>Great taffy at a great price.  There was a wid...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 40,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reviews = pd.read_csv('./../archive/Reviews.csv')\n",
+    "reviews = pd.read_csv('./../../archive/Reviews.csv')\n",
     "reviews.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-05-06T11:14:03.308093Z",
-     "end_time": "2023-05-06T11:14:03.761195Z"
+     "end_time": "2023-05-20T12:29:16.934335Z",
+     "start_time": "2023-05-20T12:29:16.644881Z"
     }
    },
    "outputs": [
@@ -60,7 +60,7 @@
      "data": {
       "text/plain": "Id                         0\nProductId                  0\nUserId                     0\nProfileName               16\nHelpfulnessNumerator       0\nHelpfulnessDenominator     0\nScore                      0\nTime                       0\nSummary                   27\nText                       0\ndtype: int64"
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,11 +80,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-05-06T11:33:44.754505Z",
-     "end_time": "2023-05-06T11:33:45.159769Z"
+     "end_time": "2023-05-20T12:29:21.317257Z",
+     "start_time": "2023-05-20T12:29:21.220515Z"
     }
    },
    "outputs": [],
@@ -166,16 +166,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-05-06T11:24:37.907537Z",
-     "end_time": "2023-05-06T11:24:37.908142Z"
+     "end_time": "2023-05-20T12:30:05.539590Z",
+     "start_time": "2023-05-20T12:30:05.536214Z"
     }
    },
    "outputs": [],
    "source": [
-    "dataset_sizes = [0.5, 1, 2, 5, 10]\n",
+    "dataset_sizes = [0.5, 1, 5]\n",
     "\n",
     "def create_datasets(dataset, job):\n",
     "    for size in dataset_sizes:\n",
@@ -298,7 +298,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Per il Job3 abbiamo bisogno delle colonne **UserId** e **Score**"
+    "### Per il Job3 abbiamo bisogno delle colonne ProductId **UserId** e **Score**"
    ],
    "metadata": {
     "collapsed": false
@@ -306,33 +306,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "           UserId  Score\n0  A3SGXH7AUHU8GW      5\n1  A1D87F6ZCVE5NK      1\n2   ABXLMWJIXXAIN      4\n3  A395BORC6FGVXV      2\n4  A1UQRSCLF8GW1T      5",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>UserId</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>A3SGXH7AUHU8GW</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>A1D87F6ZCVE5NK</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ABXLMWJIXXAIN</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>A395BORC6FGVXV</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>A1UQRSCLF8GW1T</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "    ProductId          UserId  Score\n0  B001E4KFG0  A3SGXH7AUHU8GW      5\n1  B00813GRG4  A1D87F6ZCVE5NK      1\n2  B000LQOCH0   ABXLMWJIXXAIN      4\n3  B000UA0QIQ  A395BORC6FGVXV      2\n4  B006K2ZZ7K  A1UQRSCLF8GW1T      5",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ProductId</th>\n      <th>UserId</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>B001E4KFG0</td>\n      <td>A3SGXH7AUHU8GW</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>B00813GRG4</td>\n      <td>A1D87F6ZCVE5NK</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>B000LQOCH0</td>\n      <td>ABXLMWJIXXAIN</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>B000UA0QIQ</td>\n      <td>A395BORC6FGVXV</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>B006K2ZZ7K</td>\n      <td>A1UQRSCLF8GW1T</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reviews_job3.drop(['Id', 'ProfileName', 'ProductId', 'HelpfulnessDenominator', 'HelpfulnessNumerator', 'Time', 'Summary', 'Text'], inplace = True, axis = 1)\n",
+    "reviews_job3.drop(['Id', 'ProfileName', 'HelpfulnessDenominator', 'HelpfulnessNumerator', 'Time', 'Summary', 'Text'], inplace = True, axis = 1)\n",
     "reviews_job3.head()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-06T11:31:21.761086Z",
-     "end_time": "2023-05-06T11:31:22.599387Z"
+     "end_time": "2023-05-20T12:29:31.854352Z",
+     "start_time": "2023-05-20T12:29:29.985793Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "create_datasets(reviews_job3, 'job3')"
@@ -340,21 +340,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-06T11:31:38.339672Z",
-     "end_time": "2023-05-06T11:31:52.462326Z"
+     "end_time": "2023-05-20T12:30:15.680363Z",
+     "start_time": "2023-05-20T12:30:10.616093Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
-      "text/plain": "                     0  1\n0       A27L3LYLHCQZYG  5\n1       A1AES697PC2IW5  5\n2       A1Q99N7YEJ6CZJ  5\n3       A3RJVINZDBOUNE  5\n4       A2LN6GJQI1S9EW  4\n...                ... ..\n568449  A3KJ9TZ2HLL7SA  5\n568450   A54D9YSTLFQQE  5\n568451   AWNRK5U5VSD0Q  5\n568452  A3W1H0DC7KMRU6  4\n568453   ALVV249XN8FER  5\n\n[568454 rows x 2 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>A27L3LYLHCQZYG</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>A1AES697PC2IW5</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>A1Q99N7YEJ6CZJ</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>A3RJVINZDBOUNE</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>A2LN6GJQI1S9EW</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>568449</th>\n      <td>A3KJ9TZ2HLL7SA</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>568450</th>\n      <td>A54D9YSTLFQQE</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>568451</th>\n      <td>AWNRK5U5VSD0Q</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>568452</th>\n      <td>A3W1H0DC7KMRU6</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>568453</th>\n      <td>ALVV249XN8FER</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n<p>568454 rows × 2 columns</p>\n</div>"
+      "text/plain": "                 0               1  2\n0       B003M63C0E  A27L3LYLHCQZYG  5\n1       B000CQIDHY  A1AES697PC2IW5  5\n2       B001EQ55MM  A1Q99N7YEJ6CZJ  5\n3       B001PICX42  A3RJVINZDBOUNE  5\n4       B000B6MV9Q  A2LN6GJQI1S9EW  4\n...            ...             ... ..\n568449  B000H7GS5W  A3KJ9TZ2HLL7SA  5\n568450  B001E5DZLG   A54D9YSTLFQQE  5\n568451  B0014WYXQK   AWNRK5U5VSD0Q  5\n568452  B005QRPGQU  A3W1H0DC7KMRU6  4\n568453  B006WP5UC0   ALVV249XN8FER  5\n\n[568454 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>B003M63C0E</td>\n      <td>A27L3LYLHCQZYG</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>B000CQIDHY</td>\n      <td>A1AES697PC2IW5</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>B001EQ55MM</td>\n      <td>A1Q99N7YEJ6CZJ</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>B001PICX42</td>\n      <td>A3RJVINZDBOUNE</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>B000B6MV9Q</td>\n      <td>A2LN6GJQI1S9EW</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>568449</th>\n      <td>B000H7GS5W</td>\n      <td>A3KJ9TZ2HLL7SA</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>568450</th>\n      <td>B001E5DZLG</td>\n      <td>A54D9YSTLFQQE</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>568451</th>\n      <td>B0014WYXQK</td>\n      <td>AWNRK5U5VSD0Q</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>568452</th>\n      <td>B005QRPGQU</td>\n      <td>A3W1H0DC7KMRU6</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>568453</th>\n      <td>B006WP5UC0</td>\n      <td>ALVV249XN8FER</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n<p>568454 rows × 3 columns</p>\n</div>"
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,8 +366,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-06T11:32:12.180946Z",
-     "end_time": "2023-05-06T11:32:12.497628Z"
+     "end_time": "2023-05-20T12:30:21.575332Z",
+     "start_time": "2023-05-20T12:30:20.047312Z"
     }
    }
   },
